<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserConsentActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp_hint" />
    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/number_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/with_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specify_number"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_number_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:layout_margin="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_edit_text"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <RadioButton
                    android:id="@+id/no_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any_number"/>
            </RadioGroup>

            <Button
                android:id="@+id/start_button"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/start" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>